<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
            android:layout_margin="5dp"
            android:id="@+id/cdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardUseCompatPadding="true"
            android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                        android:text="@string/enterAmount"
                        android:layout_margin="4dp"
                        android:textStyle="bold"
                      android:textSize="28sp"
                      android:gravity="center"
                      android:textColor="@color/black"
            />

            <LinearLayout android:orientation="horizontal"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <ImageView
                        android:padding="4dp"
                        android:scaleType="fitCenter"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_monetization_on_black_24dp"
                        android:tint="@color/colorPrimary"
                        android:layout_margin="5dp"/>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="8"
                        app:hintTextAppearance="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:hint="@string/initialAmount"
                            android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:padding="4dp"
                        android:scaleType="fitStart"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_wallet"
                        android:tint="@color/colorPrimary"
                        android:layout_margin="5dp"/>

                <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:layout_weight="9"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/txPaymentStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/totalSaved"
                            android:textColor="@color/black"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/totalSaved"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:id="@+id/cdView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/weeks"
                  android:layout_margin="4dp"
                  android:textStyle="bold"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="@color/black"/>

            <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9"
                    android:orientation="vertical">

                <com.santalu.emptyview.EmptyView
                        android:id="@+id/empView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:ev_gravity="center"
                        app:ev_empty_textColor="@color/colorPrimary"
                        app:ev_empty_titleTextColor="@color/colorPrimary"
                        app:ev_empty_buttonTextColor="@color/white"
                        app:ev_empty_drawable="@drawable/ic_empty_em"
                        app:ev_empty_drawableTint="@color/colorAccent"
                        app:ev_empty_text="@string/emptyString"
                        app:ev_empty_title="@string/emptyTitle"
                        app:ev_error_backgroundColor="@color/colorRed"
                        app:ev_error_button="@string/errorTryAgain"
                        app:ev_error_buttonTextColor="@color/white"
                        app:ev_error_drawable="@drawable/ic_empty_error"
                        app:ev_error_drawableTint="@color/white"
                        app:ev_error_text="@string/error_unknown"
                        app:ev_error_textColor="@color/white"
                        app:ev_error_title="@string/error_unknown_title"
                        app:ev_error_titleTextColor="@color/white"
                        app:ev_loading_drawable="@drawable/ic_empty_list"
                        app:ev_loading_drawableTint="@color/colorAccent"
                        app:ev_loading_title="@string/loadingTitle"
                        app:ev_loading_type="circular"
                        app:ev_loading_textColor="@color/colorPrimary"
                        app:ev_loading_titleTextColor="@color/colorPrimary"
                        app:ev_transition="auto">

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            tools:listitem="@layout/list_weeks" />

                </com.santalu.emptyview.EmptyView>

            </LinearLayout>

    </LinearLayout>

</LinearLayout>